--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@
 	display: block;
 	float: left;
 	text-align: right;
-	margin-left: 15%;
+	margin-left: 17%;
 }
 .tab-input {
 	margin-left: 20px;
@@ -86,6 +86,18 @@
 	text-align: center;
 }
 
+#time-start:after {
+	content: "";
+	position: relative;
+	width: 10px;
+	height: 2px;
+	background: #000;
+}
+#time-end {
+	margin-left: -4px;
+	padding-left: 30px;
+}
+
 button {
 	border: none;
 	background: #004571;
@@ -95,6 +107,7 @@ button {
 	color: white;
 	font-weight: 700;
 	letter-spacing: 5px;
+	text-indent: 5px;
 	cursor: pointer;
 	display: block;
 }
