--- a/style.css
+++ b/style.css
@@ -7,11 +7,11 @@
 	z-index: 2000;
 }
 .info-box {
-	width: 30%;
-	height: 80%;
+	width: 100%;
+	height: 100%;
 	background: #ffffff;
-	margin: 5% 35%;
-	border-radius:  5px;
+	/*margin: 5% 35%;
+	border-radius:  5px;*/
 	box-shadow: 5px 5px 5px #7d7d7d;
 }
 .close {
